# eren_next

./: README.md
bevy_test/: Cargo.toml
bevy_test/examples/: test_sprite_benchmark.rs
eren_2d/: .gitignore  Cargo.toml  README.md
eren_2d/examples/: test_sprite.rs  test_sprite_ash.rs  test_sprite_benchmark.rs  (+2 more)
eren_3d/: Cargo.toml
eren_3d/examples/: test_mesh.rs  test_model.rs
eren_3d/src/: app.rs  lib.rs
eren_3d/src/game_world/: asset_bundle.rs  mod.rs  state.rs  transform.rs
eren_3d/src/game_world/nodes/: game_node.rs  mod.rs  model_node.rs
eren_3d/src/render_world/ash/: engine.rs
eren_3d/src/render_world/wgpu/: engine.rs  mod.rs  model.rs
eren_3d/src/render_world/wgpu/asset_managers/: mod.rs  model_asset_manager.rs
eren_3d/src/render_world/wgpu/bind_group_layout/: create_material_bind_group_layout.rs  mod.rs
eren_3d/src/render_world/wgpu/load_model/: load_gltf_model.rs  mod.rs
eren_3d/src/render_world/wgpu/renderers/: mod.rs  model.wgsl  model_renderer.rs
eren_core/: Cargo.toml
eren_render_2d/: Cargo.toml
eren_render_3d/: Cargo.toml  README.md
eren_render_3d/examples/: test_pass.rs  test_pass_wasm.html  test_pass_wasm.rs
eren_render_3d/examples/wasm/: test_pass_wasm.d.ts  test_pass_wasm.js  test_pass_wasm_bg.wasm  test_pass_wasm_bg.wasm.d.ts
eren_render_3d/src/: constants.rs  renderer.rs
eren_render_3d/src/passes/: mod.rs  test_pass.rs
eren_render_3d/src/shaders/: test.wgsl
eren_render_core/: Cargo.toml
eren_render_core/examples/: test_window.rs  test_window_wasm.rs
eren_render_core/examples/wasm/: test_window_wasm.d.ts  test_window_wasm.js  test_window_wasm_bg.wasm  test_window_wasm_bg.wasm.d.ts
eren_render_core/src/: context.rs  renderer.rs
eren_render_vulkan_3d/: Cargo.toml  README.md
eren_render_vulkan_core/: Cargo.toml
eren_ts_2d/: package.json  tsconfig.json
eren_ts_3d/: package.json
eren_ts_core/: package.json
eren_window/: Cargo.toml  README.md
(+143 files in other folders)
