[package]
name = "eren_3d"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bytemuck = "1.23.0"
cgmath = "0.18.0"
eren_core = { path = "../eren_rs_core" }
gltf = "1.4.1"
image = "0.25.6"
tokio = { version = "1.45", features = ["rt-multi-thread", "macros"] }
wgpu = "25.0.2"
winit = "0.30.11"
