[package]
name = "eren_render_3d"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = "1.23.1"
eren_render_core = { path = "../eren_render_core" }
eren_window = { path = "../eren_window" }
pollster = "0.4.0"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["Window", "console"] }
wgpu = "25.0.2"
winit = "0.30.11"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
native-dialog = "0.9.0"

[lib]
crate-type = ["rlib", "cdylib"]
