[package]
name = "eren_render_core"
version = "0.1.0"
edition = "2024"

[dependencies]
eren_window = { path = "../eren_window" }
pollster = "0.4.0"
thiserror = "2.0.12"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["Window", "console"] }
wgpu = "25.0.2"
winit = "0.30.11"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
native-dialog = "0.9.0"
